environnement/dev/app/configs/istio/istio-gateway/test-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: service-db-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 3000
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: service-db-gateway-routes
  namespace: database
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/service-db-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: service-db.database.svc.cluster.local
            port:
              number: 4000
